# pypkgview

./: .gitignore  README.md  pyproject.toml
src/: schema.sql
src/pypkgview/: __init__.py  __main__.py  datastructures.py  engine.py  exporters.py  parser.py  walker.py
